# triangler-fastapi

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Dockerfile.old  LICENCE  Makefile  README.md  dev.env  pyproject.toml  requirements.txt  test.env
.assets/: triangler_fastapi_data_model.drawio
.github/workflows/: ci.yaml  pytest.yaml
src/: alembic.ini
src/tests/api/: client.py  experiment_recipes.py  test_experiments.py
src/tests/unit/: test_schemas.py
src/tests/unit/auth/: test_hashing.py  test_schemas.py  test_usecases.py
src/triangler_fastapi/: admin.py  config.py  constants.py  entrypoints.py  main.py  models.py  persistence.py  schemas.py  templating.py  usecases.py  value_types.py
src/triangler_fastapi/api/: __init__.py
src/triangler_fastapi/api/v1/: __init__.py  experiment_router.py  observation_router.py  other_router.py
src/triangler_fastapi/api/v1/auth/: depends.py  routes.py
src/triangler_fastapi/api/v1/experiments/: __init__.py  depends.py  routes.py
src/triangler_fastapi/api/v1/experiments/observations/: routes.py
src/triangler_fastapi/auth/: constants.py  depends.py  exceptions.py  hashing.py  models.py  rbac.py  router.py  schemas.py  usecases.py
src/triangler_fastapi/data/: auth_models.py  models.py  persistence.py
src/triangler_fastapi/data/migrations/: env.py
src/triangler_fastapi/data/migrations/versions/: 83600e188204_initial_migration.py
src/triangler_fastapi/domain/: repositories.py  schemas.py  token_utils.py
src/triangler_fastapi/domain/auth/: depends.py  hashing.py  rbac.py  schemas.py  usecases.py
src/triangler_fastapi/exceptions/: auth_errors.py  base.py  errors.py  http.py  mapping.py
src/triangler_fastapi/migrations/: env.py
src/triangler_fastapi/migrations/versions/: 7148bd3ccba9_initial_database_setup.py  76e0c23970e6_initial_database_setup.py  86d536e799a0_initial_database_setup.py
src/triangler_fastapi/services/: auth_service.py  experiment_service.py  observation_service.py
src/triangler_fastapi/templates/: index.html
src/triangler_fastapi/views/: __init__.py  base.py
